--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
 
 @theme inline {
   --color-primary: #d4c47e;
+  --color-secondary: #1a18bb;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-title: "Paris2024", sans-serif;
