--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,6 @@
 :root {
   --background: var(--color-secondary);
   --foreground: #ffffff;
-  --font-nunito-sans: "Nunito Sans", sans-serif;
 }
 
 @theme inline {
@@ -11,24 +10,36 @@
   --color-secondary: #1a18bb;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-title: "Paris2024", sans-serif;
-  --font-sans: var(--font-nunito-sans);
 }
 
 @layer base {
   h1 {
     @apply text-3xl sm:text-5xl;
+    font-family: var(--font-title);
   }
   h2 {
-    @apply text-2xl sm:text-4xl;
+    @apply text-3xl sm:text-4xl;
+    font-family: var(--font-title);
   }
   h3 {
     @apply text-2xl sm:text-2xl;
+    font-family: var(--font-title);
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-sans);
+  font-family: var(--font-nunito);
 }
+
+/*
+
+Instalei as fontes localmente para não ter que fazer requisição externa via CND do Google Fonts.
+As fontes foram compiladas para versões mais leves como woff2/woff.
+
+Criação de classes para cores específicas do projeto no TailWind.
+
+Definição do tamanho das fontes para responsividade.
+
+*/
