--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,8 @@
 @import "tailwindcss";
 
-:root {
-  --background: var(--color-secondary);
-  --foreground: #ffffff;
-}
-
 @theme inline {
   --color-primary: #d4c47e;
   --color-secondary: #1a18bb;
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
 }
 
 @layer base {
@@ -25,21 +18,9 @@
     @apply text-2xl sm:text-2xl;
     font-family: var(--font-title);
   }
+
+  body {
+    background: var(--color-secondary);
+    font-family: var(--font-nunito);
+  }
 }
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: var(--font-nunito);
-}
-
-/*
-
-Instalei as fontes localmente para não ter que fazer requisição externa via CND do Google Fonts.
-As fontes foram compiladas para versões mais leves como woff2/woff.
-
-Criação de classes para cores específicas do projeto no TailWind.
-
-Definição do tamanho das fontes para responsividade.
-
-*/
